kubernetes/nexvion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexvion
  namespace: nexvion
  labels:
    app: nexvion
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: nexvion
  template:
    metadata:
      labels:
        app: nexvion
    spec:
      containers:
        - name: nexvion
          image: meghanas12345/nexvion:4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
