kubernetes/nexvion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexvion-ingress
  namespace: nexvion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
    - host: nexvion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexvion-service
                port:
                  number: 80
